parser_analysis/yapl_s.output
State 27 conflicts: 1 shift/reduce
State 344 conflicts: 1 shift/reduce
State 466 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection
    6                   | f_string_expression

    7 f_string_expression: FSTRING_START f_string_body FSTRING_END

    8 f_string_body: ε
    9              | f_string_body STRING_LITERAL_PART
   10              | f_string_body interpolation_block

   11 interpolation_block: INTERPOLATION_START expression INTERPOLATION_END

   12 constant: I_CONSTANT
   13         | F_CONSTANT
   14         | ENUMERATION_CONSTANT

   15 enumeration_constant: IDENTIFIER

   16 string: STRING_LITERAL
   17       | FUNC_NAME

   18 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   19 generic_assoc_list: generic_association
   20                   | generic_assoc_list ',' generic_association

   21 generic_association: type_name ':' assignment_expression
   22                    | DEFAULT ':' assignment_expression

   23 postfix_expression: primary_expression
   24                   | postfix_expression '[' expression ']'
   25                   | postfix_expression '(' ')'
   26                   | postfix_expression '(' argument_expression_list ')'
   27                   | postfix_expression '.' IDENTIFIER
   28                   | postfix_expression PTR_OP IDENTIFIER
   29                   | postfix_expression INC_OP
   30                   | postfix_expression DEC_OP
   31                   | '(' type_name ')' '{' initializer_list '}'
   32                   | '(' type_name ')' '{' initializer_list ',' '}'

   33 argument_expression_list: assignment_expression
   34                         | argument_expression_list ',' assignment_expression

   35 unary_expression: postfix_expression
   36                 | INC_OP unary_expression
   37                 | DEC_OP unary_expression
   38                 | unary_operator cast_expression
   39                 | SIZEOF unary_expression
   40                 | SIZEOF '(' type_name ')'
   41                 | ALIGNOF '(' type_name ')'

   42 unary_operator: '&'
   43               | '*'
   44               | '+'
   45               | '-'
   46               | '~'
   47               | '!'

   48 cast_expression: unary_expression
   49                | '(' type_name ')' cast_expression

   50 multiplicative_expression: cast_expression
   51                          | multiplicative_expression '*' cast_expression
   52                          | multiplicative_expression '/' cast_expression
   53                          | multiplicative_expression '%' cast_expression

   54 additive_expression: multiplicative_expression
   55                    | additive_expression '+' multiplicative_expression
   56                    | additive_expression '-' multiplicative_expression

   57 shift_expression: additive_expression
   58                 | shift_expression LEFT_OP additive_expression
   59                 | shift_expression RIGHT_OP additive_expression

   60 concatenation_expression: shift_expression
   61                         | concatenation_expression '@' shift_expression

   62 relational_expression: concatenation_expression
   63                      | relational_expression '<' concatenation_expression
   64                      | relational_expression '>' concatenation_expression
   65                      | relational_expression LE_OP concatenation_expression
   66                      | relational_expression GE_OP concatenation_expression
   67                      | relational_expression TH_OP concatenation_expression

   68 equality_expression: relational_expression
   69                    | equality_expression EQ_OP relational_expression
   70                    | equality_expression NE_OP relational_expression

   71 and_expression: equality_expression
   72               | and_expression '&' equality_expression

   73 exclusive_or_expression: and_expression
   74                        | exclusive_or_expression '^' and_expression

   75 inclusive_or_expression: exclusive_or_expression
   76                        | inclusive_or_expression '|' exclusive_or_expression

   77 logical_and_expression: inclusive_or_expression
   78                       | logical_and_expression AND_OP inclusive_or_expression

   79 logical_or_expression: logical_and_expression
   80                      | logical_or_expression OR_OP logical_and_expression

   81 conditional_expression: logical_or_expression

   82 assignment_expression: conditional_expression
   83                      | unary_expression assignment_operator assignment_expression

   84 assignment_operator: '='
   85                    | MUL_ASSIGN
   86                    | DIV_ASSIGN
   87                    | MOD_ASSIGN
   88                    | ADD_ASSIGN
   89                    | SUB_ASSIGN
   90                    | LEFT_ASSIGN
   91                    | RIGHT_ASSIGN
   92                    | AND_ASSIGN
   93                    | XOR_ASSIGN
   94                    | OR_ASSIGN

   95 expression: assignment_expression
   96           | expression ',' assignment_expression

   97 constant_expression: conditional_expression

   98 declaration: declaration_specifiers ';'
   99            | declaration_specifiers init_declarator_list ';'
  100            | static_assert_declaration

  101 declaration_specifiers: storage_class_specifier declaration_specifiers
  102                       | storage_class_specifier
  103                       | type_specifier declaration_specifiers
  104                       | type_specifier
  105                       | type_qualifier declaration_specifiers
  106                       | type_qualifier
  107                       | function_specifier declaration_specifiers
  108                       | function_specifier
  109                       | alignment_specifier declaration_specifiers
  110                       | alignment_specifier

  111 init_declarator_list: init_declarator
  112                     | init_declarator_list ',' init_declarator

  113 init_declarator: declarator '=' initializer
  114                | declarator

  115 storage_class_specifier: TYPEDEF
  116                        | EXTERN
  117                        | STATIC
  118                        | THREAD_LOCAL
  119                        | AUTO
  120                        | REGISTER

  121 type_specifier: VOID
  122               | CHAR
  123               | SHORT
  124               | INT
  125               | LONG
  126               | FLOAT
  127               | DOUBLE
  128               | SIGNED
  129               | UNSIGNED
  130               | BOOL
  131               | COMPLEX
  132               | IMAGINARY
  133               | atomic_type_specifier
  134               | struct_or_union_specifier
  135               | enum_specifier
  136               | TYPEDEF_NAME

  137 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  138                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  139                          | struct_or_union IDENTIFIER

  140 struct_or_union: STRUCT
  141                | UNION

  142 struct_declaration_list: struct_declaration
  143                        | struct_declaration_list struct_declaration

  144 struct_declaration: specifier_qualifier_list ';'
  145                   | specifier_qualifier_list struct_declarator_list ';'
  146                   | static_assert_declaration

  147 specifier_qualifier_list: type_specifier specifier_qualifier_list
  148                         | type_specifier
  149                         | type_qualifier specifier_qualifier_list
  150                         | type_qualifier

  151 struct_declarator_list: struct_declarator
  152                       | struct_declarator_list ',' struct_declarator

  153 struct_declarator: ':' constant_expression
  154                  | declarator ':' constant_expression
  155                  | declarator

  156 enum_specifier: ENUM '{' enumerator_list '}'
  157               | ENUM '{' enumerator_list ',' '}'
  158               | ENUM IDENTIFIER '{' enumerator_list '}'
  159               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  160               | ENUM IDENTIFIER

  161 enumerator_list: enumerator
  162                | enumerator_list ',' enumerator

  163 enumerator: enumeration_constant '=' constant_expression
  164           | enumeration_constant

  165 atomic_type_specifier: ATOMIC '(' type_name ')'

  166 type_qualifier: CONST
  167               | RESTRICT
  168               | VOLATILE
  169               | ATOMIC

  170 function_specifier: INLINE
  171                   | NORETURN

  172 alignment_specifier: ALIGNAS '(' type_name ')'
  173                    | ALIGNAS '(' constant_expression ')'

  174 $@1: ε

  175 declarator: pointer $@1 direct_declarator
  176           | direct_declarator

  177 direct_declarator: IDENTIFIER
  178                  | '(' declarator ')'
  179                  | direct_declarator '[' ']'
  180                  | direct_declarator '[' '*' ']'
  181                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  182                  | direct_declarator '[' STATIC assignment_expression ']'
  183                  | direct_declarator '[' type_qualifier_list '*' ']'
  184                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  185                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  186                  | direct_declarator '[' type_qualifier_list ']'
  187                  | direct_declarator '[' assignment_expression ']'
  188                  | direct_declarator '(' parameter_type_list ')'
  189                  | direct_declarator '(' ')'
  190                  | direct_declarator '(' identifier_list ')'

  191 pointer: '*' type_qualifier_list pointer
  192        | '*' type_qualifier_list
  193        | '*' pointer
  194        | '*'

  195 type_qualifier_list: type_qualifier
  196                    | type_qualifier_list type_qualifier

  197 parameter_type_list: parameter_list ',' ELLIPSIS
  198                    | parameter_list

  199 parameter_list: parameter_declaration
  200               | parameter_list ',' parameter_declaration

  201 parameter_declaration: declaration_specifiers declarator
  202                      | declaration_specifiers abstract_declarator
  203                      | declaration_specifiers

  204 identifier_list: IDENTIFIER
  205                | identifier_list ',' IDENTIFIER

  206 type_name: specifier_qualifier_list abstract_declarator
  207          | specifier_qualifier_list

  208 abstract_declarator: pointer direct_abstract_declarator
  209                    | pointer
  210                    | direct_abstract_declarator

  211 direct_abstract_declarator: '(' abstract_declarator ')'
  212                           | '[' ']'
  213                           | '[' '*' ']'
  214                           | '[' STATIC type_qualifier_list assignment_expression ']'
  215                           | '[' STATIC assignment_expression ']'
  216                           | '[' type_qualifier_list STATIC assignment_expression ']'
  217                           | '[' type_qualifier_list assignment_expression ']'
  218                           | '[' type_qualifier_list ']'
  219                           | '[' assignment_expression ']'
  220                           | direct_abstract_declarator '[' ']'
  221                           | direct_abstract_declarator '[' '*' ']'
  222                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  223                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  224                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  225                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  226                           | direct_abstract_declarator '[' type_qualifier_list ']'
  227                           | direct_abstract_declarator '[' assignment_expression ']'
  228                           | '(' ')'
  229                           | '(' parameter_type_list ')'
  230                           | direct_abstract_declarator '(' ')'
  231                           | direct_abstract_declarator '(' parameter_type_list ')'

  232 initializer: '{' initializer_list '}'
  233            | '{' initializer_list ',' '}'
  234            | assignment_expression

  235 initializer_list: designation initializer
  236                 | initializer
  237                 | initializer_list ',' designation initializer
  238                 | initializer_list ',' initializer

  239 designation: designator_list '='

  240 designator_list: designator
  241                | designator_list designator

  242 designator: '[' constant_expression ']'
  243           | '.' IDENTIFIER

  244 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  245 statement: labeled_statement
  246          | compound_statement
  247          | expression_statement
  248          | selection_statement
  249          | iteration_statement
  250          | jump_statement

  251 labeled_statement: IDENTIFIER ':' statement
  252                  | CASE constant_expression ':' statement
  253                  | DEFAULT ':' statement

  254 compound_statement: '{' '}'
  255                   | '{' block_item_list '}'

  256 block_item_list: block_item
  257                | block_item_list block_item

  258 block_item: declaration
  259           | statement

  260 expression_statement: ';'
  261                     | expression ';'

  262 $@2: ε

  263 selection_statement: IF '(' expression ')' statement ELSE $@2 statement
  264                    | IF '(' expression ')' statement
  265                    | SWITCH '(' expression ')' statement

  266 iteration_statement: WHILE '(' expression ')' statement
  267                    | DO statement WHILE '(' expression ')' ';'
  268                    | FOR '(' expression_statement expression_statement ')' statement
  269                    | FOR '(' expression_statement expression_statement expression ')' statement
  270                    | FOR '(' declaration expression_statement ')' statement
  271                    | FOR '(' declaration expression_statement expression ')' statement

  272 jump_statement: GOTO IDENTIFIER ';'
  273               | CONTINUE ';'
  274               | BREAK ';'
  275               | RETURN ';'
  276               | RETURN expression ';'

  277 translation_unit: external_declaration
  278                 | translation_unit external_declaration

  279 external_declaration: function_definition
  280                     | declaration

  281 function_definition: declaration_specifiers declarator declaration_list compound_statement
  282                    | declaration_specifiers declarator compound_statement

  283 declaration_list: declaration
  284                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 47
    '%' (37) 53
    '&' (38) 42 72
    '(' (40) 4 18 25 26 31 32 40 41 49 165 172 173 178 188 189 190 211 228 229 230 231 244 263 264 265 266 267 268 269 270 271
    ')' (41) 4 18 25 26 31 32 40 41 49 165 172 173 178 188 189 190 211 228 229 230 231 244 263 264 265 266 267 268 269 270 271
    '*' (42) 43 51 180 183 191 192 193 194 213 221
    '+' (43) 44 55
    ',' (44) 18 20 32 34 96 112 152 157 159 162 197 200 205 233 237 238 244
    '-' (45) 45 56
    '.' (46) 27 243
    '/' (47) 52
    ':' (58) 21 22 153 154 251 252 253
    ';' (59) 98 99 144 145 244 260 261 267 272 273 274 275 276
    '<' (60) 63
    '=' (61) 84 113 163 239
    '>' (62) 64
    '@' (64) 61
    '[' (91) 24 179 180 181 182 183 184 185 186 187 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 227 242
    ']' (93) 24 179 180 181 182 183 184 185 186 187 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 227 242
    '^' (94) 74
    '{' (123) 31 32 137 138 156 157 158 159 232 233 254 255
    '|' (124) 76
    '}' (125) 31 32 137 138 156 157 158 159 232 233 254 255
    '~' (126) 46
    error (256)
    IDENTIFIER (258) 1 15 27 28 138 139 158 159 160 177 204 205 243 251 272
    I_CONSTANT (259) 12
    F_CONSTANT (260) 13
    STRING_LITERAL (261) 16 244
    FUNC_NAME (262) 17
    SIZEOF (263) 39 40
    PTR_OP (264) 28
    INC_OP (265) 29 36
    DEC_OP (266) 30 37
    LEFT_OP (267) 58
    RIGHT_OP (268) 59
    LE_OP (269) 65
    GE_OP (270) 66
    EQ_OP (271) 69
    NE_OP (272) 70
    TH_OP (273) 67
    AND_OP (274) 78
    OR_OP (275) 80
    MUL_ASSIGN (276) 85
    DIV_ASSIGN (277) 86
    MOD_ASSIGN (278) 87
    ADD_ASSIGN (279) 88
    SUB_ASSIGN (280) 89
    LEFT_ASSIGN (281) 90
    RIGHT_ASSIGN (282) 91
    AND_ASSIGN (283) 92
    XOR_ASSIGN (284) 93
    OR_ASSIGN (285) 94
    TYPEDEF_NAME (286) 136
    ENUMERATION_CONSTANT (287) 14
    TYPEDEF (288) 115
    EXTERN (289) 116
    STATIC (290) 117 181 182 184 214 215 216 222 223 225
    AUTO (291) 119
    REGISTER (292) 120
    INLINE (293) 170
    CONST (294) 166
    RESTRICT (295) 167
    VOLATILE (296) 168
    BOOL (297) 130
    CHAR (298) 122
    SHORT (299) 123
    INT (300) 124
    LONG (301) 125
    SIGNED (302) 128
    UNSIGNED (303) 129
    FLOAT (304) 126
    DOUBLE (305) 127
    VOID (306) 121
    COMPLEX (307) 131
    IMAGINARY (308) 132
    STRUCT (309) 140
    UNION (310) 141
    ENUM (311) 156 157 158 159 160
    ELLIPSIS (312) 197
    CASE (313) 252
    DEFAULT (314) 22 253
    IF <val> (315) 263 264
    ELSE <val> (316) 263
    SWITCH (317) 265
    WHILE (318) 266 267
    DO (319) 267
    FOR (320) 268 269 270 271
    GOTO (321) 272
    CONTINUE (322) 273
    BREAK (323) 274
    RETURN (324) 275 276
    ALIGNAS (325) 172 173
    ALIGNOF (326) 41
    ATOMIC (327) 165 169
    GENERIC (328) 18
    NORETURN (329) 171
    STATIC_ASSERT (330) 244
    THREAD_LOCAL (331) 118
    FSTRING_START (332) 7
    FSTRING_END (333) 7
    INTERPOLATION_START (334) 11
    INTERPOLATION_END (335) 11
    STRING_LITERAL_PART (336) 9


Nonterminals, with rules where they appear

    $accept (106)
        on left: 0
    primary_expression (107)
        on left: 1 2 3 4 5 6
        on right: 23
    f_string_expression (108)
        on left: 7
        on right: 6
    f_string_body (109)
        on left: 8 9 10
        on right: 7 9 10
    interpolation_block (110)
        on left: 11
        on right: 10
    constant (111)
        on left: 12 13 14
        on right: 2
    enumeration_constant (112)
        on left: 15
        on right: 163 164
    string (113)
        on left: 16 17
        on right: 3
    generic_selection (114)
        on left: 18
        on right: 5
    generic_assoc_list (115)
        on left: 19 20
        on right: 18 20
    generic_association (116)
        on left: 21 22
        on right: 19 20
    postfix_expression (117)
        on left: 23 24 25 26 27 28 29 30 31 32
        on right: 24 25 26 27 28 29 30 35
    argument_expression_list (118)
        on left: 33 34
        on right: 26 34
    unary_expression (119)
        on left: 35 36 37 38 39 40 41
        on right: 36 37 39 48 83
    unary_operator (120)
        on left: 42 43 44 45 46 47
        on right: 38
    cast_expression (121)
        on left: 48 49
        on right: 38 49 50 51 52 53
    multiplicative_expression (122)
        on left: 50 51 52 53
        on right: 51 52 53 54 55 56
    additive_expression (123)
        on left: 54 55 56
        on right: 55 56 57 58 59
    shift_expression (124)
        on left: 57 58 59
        on right: 58 59 60 61
    concatenation_expression (125)
        on left: 60 61
        on right: 61 62 63 64 65 66 67
    relational_expression (126)
        on left: 62 63 64 65 66 67
        on right: 63 64 65 66 67 68 69 70
    equality_expression (127)
        on left: 68 69 70
        on right: 69 70 71 72
    and_expression (128)
        on left: 71 72
        on right: 72 73 74
    exclusive_or_expression (129)
        on left: 73 74
        on right: 74 75 76
    inclusive_or_expression (130)
        on left: 75 76
        on right: 76 77 78
    logical_and_expression (131)
        on left: 77 78
        on right: 78 79 80
    logical_or_expression (132)
        on left: 79 80
        on right: 80 81
    conditional_expression (133)
        on left: 81
        on right: 82 97
    assignment_expression (134)
        on left: 82 83
        on right: 18 21 22 33 34 83 95 96 181 182 184 185 187 214 215 216 217 219 222 223 224 225 227 234
    assignment_operator (135)
        on left: 84 85 86 87 88 89 90 91 92 93 94
        on right: 83
    expression (136)
        on left: 95 96
        on right: 4 11 24 96 261 263 264 265 266 267 269 271 276
    constant_expression (137)
        on left: 97
        on right: 153 154 163 173 242 244 252
    declaration (138)
        on left: 98 99 100
        on right: 258 270 271 280 283 284
    declaration_specifiers (139)
        on left: 101 102 103 104 105 106 107 108 109 110
        on right: 98 99 101 103 105 107 109 201 202 203 281 282
    init_declarator_list (140)
        on left: 111 112
        on right: 99 112
    init_declarator (141)
        on left: 113 114
        on right: 111 112
    storage_class_specifier (142)
        on left: 115 116 117 118 119 120
        on right: 101 102
    type_specifier (143)
        on left: 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136
        on right: 103 104 147 148
    struct_or_union_specifier (144)
        on left: 137 138 139
        on right: 134
    struct_or_union (145)
        on left: 140 141
        on right: 137 138 139
    struct_declaration_list (146)
        on left: 142 143
        on right: 137 138 143
    struct_declaration (147)
        on left: 144 145 146
        on right: 142 143
    specifier_qualifier_list (148)
        on left: 147 148 149 150
        on right: 144 145 147 149 206 207
    struct_declarator_list (149)
        on left: 151 152
        on right: 145 152
    struct_declarator (150)
        on left: 153 154 155
        on right: 151 152
    enum_specifier (151)
        on left: 156 157 158 159 160
        on right: 135
    enumerator_list (152)
        on left: 161 162
        on right: 156 157 158 159 162
    enumerator (153)
        on left: 163 164
        on right: 161 162
    atomic_type_specifier (154)
        on left: 165
        on right: 133
    type_qualifier (155)
        on left: 166 167 168 169
        on right: 105 106 149 150 195 196
    function_specifier (156)
        on left: 170 171
        on right: 107 108
    alignment_specifier (157)
        on left: 172 173
        on right: 109 110
    declarator (158)
        on left: 175 176
        on right: 113 114 154 155 178 201 281 282
    $@1 (159)
        on left: 174
        on right: 175
    direct_declarator (160)
        on left: 177 178 179 180 181 182 183 184 185 186 187 188 189 190
        on right: 175 176 179 180 181 182 183 184 185 186 187 188 189 190
    pointer (161)
        on left: 191 192 193 194
        on right: 175 191 193 208 209
    type_qualifier_list (162)
        on left: 195 196
        on right: 181 183 184 185 186 191 192 196 214 216 217 218 222 224 225 226
    parameter_type_list (163)
        on left: 197 198
        on right: 188 229 231
    parameter_list (164)
        on left: 199 200
        on right: 197 198 200
    parameter_declaration (165)
        on left: 201 202 203
        on right: 199 200
    identifier_list (166)
        on left: 204 205
        on right: 190 205
    type_name (167)
        on left: 206 207
        on right: 21 31 32 40 41 49 165 172
    abstract_declarator (168)
        on left: 208 209 210
        on right: 202 206 211
    direct_abstract_declarator (169)
        on left: 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231
        on right: 208 210 220 221 222 223 224 225 226 227 230 231
    initializer (170)
        on left: 232 233 234
        on right: 113 235 236 237 238
    initializer_list (171)
        on left: 235 236 237 238
        on right: 31 32 232 233 237 238
    designation (172)
        on left: 239
        on right: 235 237
    designator_list (173)
        on left: 240 241
        on right: 239 241
    designator (174)
        on left: 242 243
        on right: 240 241
    static_assert_declaration (175)
        on left: 244
        on right: 100 146
    statement (176)
        on left: 245 246 247 248 249 250
        on right: 251 252 253 259 263 264 265 266 267 268 269 270 271
    labeled_statement (177)
        on left: 251 252 253
        on right: 245
    compound_statement (178)
        on left: 254 255
        on right: 246 281 282
    block_item_list (179)
        on left: 256 257
        on right: 255 257
    block_item (180)
        on left: 258 259
        on right: 256 257
    expression_statement (181)
        on left: 260 261
        on right: 247 268 269 270 271
    selection_statement (182)
        on left: 263 264 265
        on right: 248
    $@2 (183)
        on left: 262
        on right: 263
    iteration_statement (184)
        on left: 266 267 268 269 270 271
        on right: 249
    jump_statement (185)
        on left: 272 273 274 275 276
        on right: 250
    translation_unit (186)
        on left: 277 278
        on right: 0 278
    external_declaration (187)
        on left: 279 280
        on right: 277 278
    function_definition (188)
        on left: 281 282
        on right: 279
    declaration_list (189)
        on left: 283 284
        on right: 281 284


State 0

    0 $accept: • translation_unit $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    BOOL           shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    COMPLEX        shift, and go to state 21
    IMAGINARY      shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    ALIGNAS        shift, and go to state 26
    ATOMIC         shift, and go to state 27
    NORETURN       shift, and go to state 28
    STATIC_ASSERT  shift, and go to state 29
    THREAD_LOCAL   shift, and go to state 30

    declaration                go to state 31
    declaration_specifiers     go to state 32
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41
    static_assert_declaration  go to state 42
    translation_unit           go to state 43
    external_declaration       go to state 44
    function_definition        go to state 45


State 1

  136 type_specifier: TYPEDEF_NAME •

    $default  reduce using rule 136 (type_specifier)


State 2

  115 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 115 (storage_class_specifier)


State 3

  116 storage_class_specifier: EXTERN •

    $default  reduce using rule 116 (storage_class_specifier)


State 4

  117 storage_class_specifier: STATIC •

    $default  reduce using rule 117 (storage_class_specifier)


State 5

  119 storage_class_specifier: AUTO •

    $default  reduce using rule 119 (storage_class_specifier)


State 6

  120 storage_class_specifier: REGISTER •

    $default  reduce using rule 120 (storage_class_specifier)


State 7

  170 function_specifier: INLINE •

    $default  reduce using rule 170 (function_specifier)


State 8

  166 type_qualifier: CONST •

    $default  reduce using rule 166 (type_qualifier)


State 9

  167 type_qualifier: RESTRICT •

    $default  reduce using rule 167 (type_qualifier)


State 10

  168 type_qualifier: VOLATILE •

    $default  reduce using rule 168 (type_qualifier)


State 11

  130 type_specifier: BOOL •

    $default  reduce using rule 130 (type_specifier)


State 12

  122 type_specifier: CHAR •

    $default  reduce using rule 122 (type_specifier)


State 13

  123 type_specifier: SHORT •

    $default  reduce using rule 123 (type_specifier)


State 14

  124 type_specifier: INT •

    $default  reduce using rule 124 (type_specifier)


State 15

  125 type_specifier: LONG •

    $default  reduce using rule 125 (type_specifier)


State 16

  128 type_specifier: SIGNED •

    $default  reduce using rule 128 (type_specifier)


State 17

  129 type_specifier: UNSIGNED •

    $default  reduce using rule 129 (type_specifier)


State 18

  126 type_specifier: FLOAT •

    $default  reduce using rule 126 (type_specifier)


State 19

  127 type_specifier: DOUBLE •

    $default  reduce using rule 127 (type_specifier)


State 20

  121 type_specifier: VOID •

    $default  reduce using rule 121 (type_specifier)


State 21

  131 type_specifier: COMPLEX •

    $default  reduce using rule 131 (type_specifier)


State 22

  132 type_specifier: IMAGINARY •

    $default  reduce using rule 132 (type_specifier)


State 23

  140 struct_or_union: STRUCT •

    $default  reduce using rule 140 (struct_or_union)


State 24

  141 struct_or_union: UNION •

    $default  reduce using rule 141 (struct_or_union)


State 25

  156 enum_specifier: ENUM • '{' enumerator_list '}'
  157               | ENUM • '{' enumerator_list ',' '}'
  158               | ENUM • IDENTIFIER '{' enumerator_list '}'
  159               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
  160               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 46
    '{'         shift, and go to state 47


State 26

  172 alignment_specifier: ALIGNAS • '(' type_name ')'
  173                    | ALIGNAS • '(' constant_expression ')'

    '('  shift, and go to state 48


State 27

  165 atomic_type_specifier: ATOMIC • '(' type_name ')'
  169 type_qualifier: ATOMIC •

    '('  shift, and go to state 49

    '('       [reduce using rule 169 (type_qualifier)]
    $default  reduce using rule 169 (type_qualifier)


State 28

  171 function_specifier: NORETURN •

    $default  reduce using rule 171 (function_specifier)


State 29

  244 static_assert_declaration: STATIC_ASSERT • '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 50


State 30

  118 storage_class_specifier: THREAD_LOCAL •

    $default  reduce using rule 118 (storage_class_specifier)


State 31

  280 external_declaration: declaration •

    $default  reduce using rule 280 (external_declaration)


State 32

   98 declaration: declaration_specifiers • ';'
   99            | declaration_specifiers • init_declarator_list ';'
  281 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  282                    | declaration_specifiers • declarator compound_statement

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '*'         shift, and go to state 53
    ';'         shift, and go to state 54

    init_declarator_list  go to state 55
    init_declarator       go to state 56
    declarator            go to state 57
    direct_declarator     go to state 58
    pointer               go to state 59


State 33

  101 declaration_specifiers: storage_class_specifier • declaration_specifiers
  102                       | storage_class_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 102 (declaration_specifiers)

    declaration_specifiers     go to state 60
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


State 34

  103 declaration_specifiers: type_specifier • declaration_specifiers
  104                       | type_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 104 (declaration_specifiers)

    declaration_specifiers     go to state 61
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


State 35

  134 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 134 (type_specifier)


State 36

  137 struct_or_union_specifier: struct_or_union • '{' struct_declaration_list '}'
  138                          | struct_or_union • IDENTIFIER '{' struct_declaration_list '}'
  139                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 62
    '{'         shift, and go to state 63


State 37

  135 type_specifier: enum_specifier •

    $default  reduce using rule 135 (type_specifier)


State 38

  133 type_specifier: atomic_type_specifier •

    $default  reduce using rule 133 (type_specifier)


State 39

  105 declaration_specifiers: type_qualifier • declaration_specifiers
  106                       | type_qualifier •
